add tags and search tags

--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,4 @@
 # FIX QUERY GET AND POST POST LIST
 # FIX IMAGE STYLE IN POST DETAIL IF MULTIPLE IMAGES
+# ADD DETAIL TO SIDEBAR
+# EDIT POST DETAIL FOR SHARED POST
