adding forum feature

--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,6 @@
 # FIX IMAGE STYLE IN POST DETAIL IF MULTIPLE IMAGES
 # ADD DETAIL TO SIDEBAR
 # EDIT POST DETAIL FOR SHARED POST
+---
+# FIX POST VIEW
+# ADD FILE TO FORUM
