refactor layout_blank.html

--- a/todo.txt
+++ b/todo.txt
@@ -10,3 +10,5 @@
 # POLL AND MARKETPLACE
 # UTILISE BLOCK JS
 # FIX ONCLICK ON CREATE MP
+# AUTOESCAPE TWEET
+# CHANGE ALL URL FOR AJAX IF PRODUCTIO
