CRUD post with AJAX/HTMX

--- a/todo.txt
+++ b/todo.txt
@@ -12,3 +12,7 @@
 # FIX ONCLICK ON CREATE MP
 # AUTOESCAPE TWEET
 # CHANGE ALL URL FOR AJAX IF PRODUCTIO
+
+----
+LIST OF MANUAL URL.
+# AJAX FOR LIKE IN POST LIST AND POST DETAIL FOR COMMENNT
