add blog to home and link preview

--- a/todo.txt
+++ b/todo.txt
@@ -17,3 +17,5 @@
 LIST OF MANUAL URL.
 # AJAX FOR LIKE IN POST LIST AND POST DETAIL FOR COMMENNT
 # AJAX FOR SUBSCRIBER IN FORUM
+---
+#MORE case IN BLOG DETAIL
