--- a/todo.txt
+++ b/todo.txt
@@ -18,4 +18,8 @@ LIST OF MANUAL URL.
 # AJAX FOR LIKE IN POST LIST AND POST DETAIL FOR COMMENNT
 # AJAX FOR SUBSCRIBER IN FORUM
 ---
-#MORE case IN BLOG DETAIL
+# MORE case IN BLOG DETAIL
+# PAGINATION IN BLOG LIST
+# ALL FUNCTION AFTER WAYPOINT SCROLL
+# BLOG MANAGE AND READLIST CAN BE MERGED
+# WHEN D-NONE DRAFTED JS ESCAPED => THE "#" THE CULPRIT!!
